mengubah sedikit css dan menambah sedikit js

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,8 +34,7 @@
     flex-grow: 1.7;
     display: flex;
     justify-content: center;
-
-    padding: 50px;
+    align-items: center;
 }
 
 .add-book {
