--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,147 +1,211 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Roboto', Arial, sans-serif;
-    font-size: 14px;
-    /* border: 1px solid red !important; */
+  box-sizing: border-box;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 14px;
+  /* border: 1px solid red !important; */
 }
 
-.input-book {
-    display: flex;
+.container-input {
+  display: flex;
 
-    width: 100vw;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 .input-img-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: .3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 0.3;
 
-    background-image: url(../img/img-input.jpg);
-    background-size: cover;
-    background-position: -300px 0;
+  background-image: url(../img/img-input.jpg);
+  background-size: cover;
+  background-position: -300px 0;
 }
 
 .input-img-content h1 {
-    font-size: 28px;
-    font-weight: bold;
-    color: #fff;
-    text-shadow: 0 1px 5px rgba(0,0,0,.3), 0 0 20px #000;
+  font-size: 32px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), 0 0 20px #000;
 }
 
 .input-section {
-    flex-grow: 1.7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  flex-grow: 1.7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-book {
-    flex-basis: 80%;
+  flex-basis: 85%;
 }
 
 .add-book h2 {
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 30px;
+  font-size: 26px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .text-shadow {
-    text-shadow: 0 1px 3px rgba(0,0,0,.1);
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .add-book .input {
-    display: block;
-    width: 100%;
-    border: 1px solid rgb(235, 235, 235);
+  display: block;
+  width: 100%;
+  border: 1px solid rgb(235, 235, 235);
 
-    padding: 14px 20px;
-    border-radius: 5px;
-    outline-color: rgb(50, 158, 94, .3);
-    margin-bottom: 20px;
+  padding: 14px 20px;
+  border-radius: 5px;
+  outline-color: rgba(50, 158, 94, 0.3);
+  margin-bottom: 20px;
+  font-weight: 500;
 }
 
 .add-book label {
-    display: inline-block;
-    font-weight: bold;
+  display: inline-block;
+  font-weight: bold;
 }
 
 .mb-10 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-.add-book .container-input {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    row-gap: 20px;
-    column-gap: 40px;
+.add-book .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  column-gap: 40px;
 
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .checkbox-container {
-    display: flex;
+  display: flex;
 }
 
 .checkbox-container label {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 .selesai-dibaca {
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
 }
 
 .btn-container {
-    flex-basis: 300px;
-    display: flex;
-    justify-content: center;
+  flex-basis: 300px;
+  display: flex;
+  justify-content: center;
 }
 
 .add-book .btn {
-    max-width: 150px;
-    width: 100%;
-    padding: 12px 10px;
-    box-sizing: content-box;
-    border-radius: 5px;
-    font-weight: bold;
+  max-width: 150px;
+  width: 100%;
+  padding: 12px 10px;
+  box-sizing: content-box;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 .submit {
-    margin-right: 25px;
-    background-color: #329e5e;
-    border: none;
-    color: #fff;
+  margin-right: 25px;
+  background-color: #329e5e;
+  border: none;
+  color: #fff;
 }
 
 .submit:hover {
-    background-color: #198544;
+  background-color: #198544;
+}
+
+.submit:active {
+  background-color: #198544;
 }
 
 .reset {
-    background-color: #fff;
-    color: #999999;
-    border: 1px solid rgb(235, 235, 235);
+  background-color: #fff;
+  color: #999999;
+  border: 1px solid rgb(235, 235, 235);
 }
 
 .reset:hover {
-    background-color: #329e5e;
-    color: #fff;
+  background-color: #329e5e;
+  color: #fff;
 }
 
-@media (max-width: 1024px) {
-    .input-img-content {
-        display: none;
-    }
+.reset:active {
+  background-color: #329e5e;
+  color: #fff;
+}
+
+.container-search {
+  width: 100%;
+  padding: 40px 35px;
+  background-color: #4e9f3d;
+}
+
+.container-search .container {
+  max-width: 800px;
+  margin: auto;
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.container-search .container h2 {
+  color: #fff;
+  font-weight: bold;
+  font-size: 26px;
+  margin-bottom: 20px;
+}
+
+.container-search .container .row {
+  display: flex;
+  flex-basis: 100%;
+}
+
+.container-search .keyword {
+  width: 100%;
+  border: none;
+  padding: 14px 20px;
+  border-radius: 5px 0 0px 5px;
+  font-weight: 500;
+}
+
+.container-search .search {
+  margin-left: -3px;
+  border-radius: 0 5px 5px 0;
+  padding: 14px 30px;
+  border: none;
+  font-weight: bold;
+  background-color: #3f4e4f;
+  color: #f4f4f5;
+  transition: 0.3s;
+}
+
+.container-search .search:hover {
+  background-color: #2c3639;
+}
+.container-search .search:active {
+  background-color: #2c3639;
+}
+
+.container-search .keyword:focus {
+  outline: rgba(0, 0, 0, 0.3) solid 5px;
 }
 
 @media (max-width: 700px) {
-    .btn-container {
-        flex-basis: 100%;
-        justify-content: space-between;
-    }
+  .input-img-content {
+    display: none;
+  }
+  .btn-container {
+    flex-basis: 100%;
+    justify-content: space-between;
+  }
 }
