--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,14 +20,13 @@
 
   background-image: url(../img/img-input.jpg);
   background-size: cover;
-  background-position: -300px 0;
 }
 
 .input-img-content h1 {
   font-size: 32px;
   font-weight: bold;
   color: #fff;
-  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), 0 0 20px #000;
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .input-section {
@@ -35,20 +34,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f4f4f5;
 }
 
 .add-book {
-  flex-basis: 85%;
+  flex-basis: 90%;
+  padding: 32px;
+  border: 1px solid rgb(229, 229, 229);
+  border-radius: 8px;
+  background-color: #fff;
 }
 
-.add-book h2 {
-  font-size: 26px;
-  text-align: center;
-  margin-bottom: 30px;
+.add-book h4 {
+  font-size: 20px;
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+  font-weight: 500;
+  border-bottom: 1px solid rgb(229, 229, 229);
 }
 
 .text-shadow {
-  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .add-book .input {
@@ -65,7 +71,8 @@
 
 .add-book label {
   display: inline-block;
-  font-weight: bold;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .mb-10 {
@@ -78,7 +85,7 @@
   align-items: center;
   flex-wrap: wrap;
   row-gap: 20px;
-  column-gap: 40px;
+  column-gap: 20px;
 
   margin-top: 40px;
 }
@@ -91,13 +98,13 @@
   line-height: 1.5;
 }
 
-.selesai-dibaca {
+.check-selesai-dibaca {
   width: 15px;
   height: 15px;
   margin-left: 10px;
 }
 
-.btn-container {
+.container-input .btn-container {
   flex-basis: 300px;
   display: flex;
   justify-content: center;
@@ -145,8 +152,8 @@
 
 .container-search {
   width: 100%;
-  padding: 40px 35px;
-  background-color: #4e9f3d;
+  padding: 40px 16px;
+  background-color: #62bd50;
 }
 
 .container-search .container {
@@ -160,52 +167,172 @@
 
 .container-search .container h2 {
   color: #fff;
-  font-weight: bold;
-  font-size: 26px;
+  font-weight: 500;
+  font-size: 24px;
   margin-bottom: 20px;
 }
 
-.container-search .container .row {
+.container-search .container .search-book {
   display: flex;
   flex-basis: 100%;
 }
 
 .container-search .keyword {
   width: 100%;
-  border: none;
+  border: 1px solid #e5e5e5;
   padding: 14px 20px;
   border-radius: 5px 0 0px 5px;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
   font-weight: 500;
+  outline: none;
 }
 
 .container-search .search {
+  border: 1px solid #e5e5e5;
   margin-left: -3px;
   border-radius: 0 5px 5px 0;
   padding: 14px 30px;
   border: none;
+  font-size: 18px;
   font-weight: bold;
-  background-color: #3f4e4f;
-  color: #f4f4f5;
+  background-color: #f8f8f8;
+  color: #030303;
   transition: 0.3s;
 }
 
 .container-search .search:hover {
-  background-color: #2c3639;
+  background-color: #e8e8e8;
 }
 .container-search .search:active {
-  background-color: #2c3639;
+  background-color: #e8e8e8;
 }
 
-.container-search .keyword:focus {
-  outline: rgba(0, 0, 0, 0.3) solid 5px;
+.container-books {
+  background-color: #f4f4f5;
+  padding: 40px 55px;
+
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  row-gap: 30px;
+}
+
+.container-books .container {
+  background-color: #fff;
+  border: 1px solid #e4e4e7;
+  border-radius: 8px;
+
+  flex-basis: calc(50% - 15px);
+  height: fit-content;
+}
+
+.container-books .container-header {
+  font-size: 16px;
+  font-weight: normal;
+  color: #3f3f46;
+  border-bottom: 1px solid #d4d4d8;
+  padding: 16px 24px;
+}
+
+.list-item {
+  padding: 16px 24px;
+}
+
+.list-item p {
+  font-size: 13px;
+  margin: 6px 0;
+  color: #3f3f46;
+}
+
+.container-books .btn {
+  padding: 5px 10px;
+  font-size: 13px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+
+.container-books .selesai-dibaca {
+  background-color: #198754;
+}
+
+.container-books .selesai-dibaca:hover {
+  background-color: #147347;
+}
+
+.container-books .selesai-dibaca:active {
+  background-color: #147347;
+}
+
+.container-books .belum-selesai-dibaca {
+  background-color: #ffc107;
+}
+
+.container-books .belum-selesai-dibaca:hover {
+  background-color: #ffd148;
+}
+
+.container-books .belum-selesai-dibaca:active {
+  background-color: #ffd148;
+}
+
+.container-books .delete {
+  background-color: #dc3545;
+}
+
+.container-books .delete:hover {
+  background-color: #bd2433;
+}
+
+.container-books .delete:active {
+  background-color: #bd2433;
+}
+
+.container-book {
+  border-bottom: 1px solid #d4d4d8;
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+}
+
+.container-book:last-child {
+  border-bottom: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 700px) {
   .input-img-content {
     display: none;
   }
-  .btn-container {
+}
+
+@media (max-width: 900px) {
+  .container-input .btn-container {
     flex-basis: 100%;
     justify-content: space-between;
+  }
+
+  .container-books {
+    padding: 0;
+  }
+
+  .container-books .container {
+    flex-basis: 100%;
+    border-radius: 0;
+  }
+
+  .container-books .container-header,
+  .container-books .list-item {
+    padding: 16px;
+  }
+}
+
+@media (max-width: 576px) {
+  .add-book {
+    flex-basis: 100%;
+    padding: 40px 16px;
+    border-radius: 0px;
+    border-left: 0;
+    border-right: 0;
   }
 }
